--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <header>
             <nav>
                 <div id="nav-left">
-                    <a href="index.html"><h2>FEVI Software</h2></a>
+                    <a href="."><h2>FEVI Software</h2></a>
                 </div>
                 <div id="nav-right">
                     <ul id="desktop-nav">
-                        <li><a>Portfolio</a></li>
+                        <li><a href="./portfolio/">Portfolio</a></li>
                         <li><a>about</a></li>
                         <li><a>contact</a></li>
                         <li><a>api</a></li>
