Started with a easy to create cube

--- a/website/levedoper/public/index.html
+++ b/website/levedoper/public/index.html
@@ -10,6 +10,9 @@
       name="description"
       content="FEVI SOFTWARE, tu mejor opción en desarrollo web y programación."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Righteous&family=Spartan:wght@200;400&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>FEVI SOFTWARE</title>
