--- a/website/Levedoper simplified/public/index.html
+++ b/website/Levedoper simplified/public/index.html
@@ -26,6 +26,8 @@
       name="description"
       content="FEVI SOFTWARE, tu mejor opción en desarrollo web y programación."
     />
+    <meta name="keywords" content="pagina, web, landing, page, website, sitio, e-commerce, sitio web, pagina web, pagina en linea, desarrollo web">
+    <meta name="author" content="FEVI Software">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat:wght@300&family=Righteous&family=Spartan:wght@200;400&display=swap" rel="stylesheet"><link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
